--- a/style.css
+++ b/style.css
@@ -117,9 +117,14 @@ h1 {
   border-radius: 10px 10px 0 0;
   padding: 15px 20px;
   position: absolute;
-  botom: -50px;
+  bottom: -50px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .notification-container p {
   margin: 0;
+}
+
+.notification-container.show {
+  transform: translateY(-50px);
 }
